--- a/css/styles.css
+++ b/css/styles.css
@@ -13,11 +13,12 @@ body, a, a:hover, a:visited{
 
 /*  IDs          */
 
-#app-name{font-size: 28px;}
+#app-name{font-size: 36px;}
 
 #top-navbar{
     border-bottom: 1px solid lightgrey;
     background-color:#dfdfdf;
+    padding:10px  0px;
 }
 
 #top-navbar-button{
@@ -26,18 +27,27 @@ body, a, a:hover, a:visited{
 
 #top-navbar-search-container{
     display:inline-flex; position:relative;
-    width:40%;
-    padding:0;  margin:0;
+    padding:0; padding-left: 15px;  margin:0;
 }
 
 #top-navbar-search-container form{
     width:100%;  padding-left:0; padding-right: 0;
 }
 
-#top-navbar-search-container .input-group{
-    width:100%;  margin:0;   display:inline-flex;
+#top-navbar-search-container form input{
+    width: 100%;
 }
 
+
+#top-navbar-search-container .input-group{
+    width:100%;  margin:0; display: inline-flex;
+}
+
+#login-and-create-account{
+    display:inline-flex;  float:right;
+}
+
+#login-and-create-account li{display: inline;}
 
 #todos-body{font-size: 16px;}
 
