--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,13 @@ body, a, a:hover, a:visited{
     text-decoration: none;
 }
 
+a:hover, a:active, a:hover{background-color: inherit;}
+
+div{
+    width: 100%;  height: 100%;
+border:1px solid black;
+}
+
 
 /*  Classes          */
 
@@ -15,10 +22,21 @@ body, a, a:hover, a:visited{
 
 #app-name{font-size: 36px;}
 
+#app-name-and-categories{display:flex;float:left;}
+
+.navbar-div{
+    display: flex;
+    margin-top: 10px;
+    margin-right: 10px;
+    float:left;
+
+
+}
+
 #top-navbar{
     border-bottom: 1px solid lightgrey;
     background-color:#dfdfdf;
-    padding:10px  0px;
+    padding-bottom: 25px;
 }
 
 #top-navbar-button{
@@ -26,28 +44,24 @@ body, a, a:hover, a:visited{
 }
 
 #top-navbar-search-container{
-    display:inline-flex; position:relative;
-    padding:0; padding-left: 15px;  margin:0;
+    padding:0; padding-left: 15px;   display:flex;
+
 }
 
-#top-navbar-search-container form{
-    width:100%;  padding-left:0; padding-right: 0;
-}
-
-#top-navbar-search-container form input{
-    width: 100%;
+#top-navbar-search-container input{
+    display:flex;  width: 100%; float:left;
 }
 
 
-#top-navbar-search-container .input-group{
-    width:100%;  margin:0; display: inline-flex;
+#search-and-create-and-login{
+    float:left;
 }
 
 #login-and-create-account{
-    display:inline-flex;  float:right;
+      float:right; position: relative;
+    top:5px; width:auto;
 }
 
-#login-and-create-account li{display: inline;}
 
 #todos-body{font-size: 16px;}
 
