--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,9 @@ div.float-right{display:inline; width:auto;float:right;}
     top:28px; font-size: 14px;
 }
 
-.invisible-and-collapsed{
-    display:none;
-}
+.invisible-and-collapsed{display: none;}
+
+#account-creation-success{display:block;padding-left: 15px; margin-top: 20px;}
+
+
+#account-creation-success.invisible-and-collapsed{display: none;}
