--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ div{
 
 #app-name, #page-name{font-size: 30px;}
 
-#app-name-and-categories{display:flex;float:left;}
+.app-name-and-categories{display:flex;float:left;}
 #app-name-container{width:240px; padding-right: 0;}
 
 .navbar-div{
@@ -49,7 +49,7 @@ div.float-right{display:inline; width:auto;float:right;}
 .dropdown-menu{float:right;}
 
 
-#top-navbar{
+.top-navbar{
     border-radius: 15px;
     border: 1px solid #e0e0e0;
     background-color: #cfffd4;
