--- a/css/styles.css
+++ b/css/styles.css
@@ -174,3 +174,4 @@ div.float-right{display:inline; width:auto;float:right;}
 
 .add-item-button input{width:100%; height:100%;}
 
+#no-lists-found{padding-left: 20px;}
