--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@ body, a, a:hover, a:visited{
 
 a:hover, a:active, a:hover{background-color: #abf2ae;}
 
+a{cursor: pointer;}
+
 div{
     width: 100%;  height: 100%;
 }
