--- a/css/styles.css
+++ b/css/styles.css
@@ -177,3 +177,6 @@ div.float-right{display:inline; width:auto;float:right;}
 .add-item-button input{width:100%; height:100%;}
 
 #no-lists-found{padding-left: 20px;}
+
+
+#list-name-header{text-align: center;}
